[gd_scene load_steps=4 format=3 uid="uid://cy71q0uelvtaq"]

[ext_resource type="Script" uid="uid://bqkftgjubdfr2" path="res://scripts/enemy_ui.gd" id="1_mmwye"]
[ext_resource type="Texture2D" uid="uid://dd0enp3kwurxm" path="res://assets/menu/evil_heart_full.png" id="2_1fg44"]
[ext_resource type="Texture2D" uid="uid://bj08xyqbx64wt" path="res://assets/menu/heart_empty.png" id="3_b3hpy"]

[node name="EnemyUI" type="CanvasLayer"]
script = ExtResource("1_mmwye")
full_heart = ExtResource("2_1fg44")
empty_heart = ExtResource("3_b3hpy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.489
anchor_right = 0.524
anchor_bottom = 0.018
offset_left = 678.12
offset_top = 16.0
offset_right = 870.92
offset_bottom = 76.56
grow_horizontal = 2

[node name="Heart1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_1fg44")

[node name="Heart2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_1fg44")

[node name="Heart3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_1fg44")
